old-templates/2-security_group.yaml
AWSTemplateFormatVersion: "2010-09-09"

#------------------------------------------------------
# Parameters
#------------------------------------------------------
Parameters:
  ProjectName:
    Type: String
  Env:
    Type: String
  VpcId:
    Type: String
  BackendPort:
    Type: Number
    Default: 8080
  FrontendPort:
    Type: Number
    Default: 80
  DbPort:
    Type: Number
    Default: 3306
  

#------------------------------------------------------
# Security Groups
#------------------------------------------------------
Resources:
  #------------------------------------------------------
  # Load Balancer SG
  #------------------------------------------------------
  LoadBalancerSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Env}-lb-sg
      GroupDescription: Load balancer SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-lb-sg"
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # EC2 SGs
  #------------------------------------------------------
  Ec2BastionSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Env}-ec2-bastion-sg
      GroupDescription: Bastion Host SG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-ec2-bastion-sg"
        - Key: Environment
          Value: !Ref Env
  
  #------------------------------------------------------
  # ECS Service SGs
  #------------------------------------------------------
  EcsBackendServiceSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Env}-backend-sg
      GroupDescription: Security group for ECS Backend Service
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref BackendPort
          ToPort: !Ref BackendPort
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-backend-sg"
        - Key: Environment
          Value: !Ref Env

  EcsFrontendServiceSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Env}-frontend-sg
      GroupDescription: Security group for ECS Frontend Service
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref FrontendPort
          ToPort: !Ref FrontendPort
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-frontend-sg"
        - Key: Environment
          Value: !Ref Env
  
  #------------------------------------------------------
  # ECS Service SGs
  #------------------------------------------------------
  DatabaseSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Env}-database-sg
      GroupDescription: Security group for RDS database
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DbPort
          ToPort: !Ref DbPort
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Env}-database-sg"
        - Key: Environment
          Value: !Ref Env

#------------------------------------------------------
# Export:
#------------------------------------------------------
Outputs:
  LoadBalancerSgId:
    Value: !Ref LoadBalancerSg
    Export:
      Name: !Sub ${ProjectName}-${Env}-lb-sg-id
  Ec2BastionSgId:
    Value: !Ref Ec2BastionSg
    Export:
      Name: !Sub ${ProjectName}-${Env}-ec2-bastion-sg-id
  EcsBackendServiceSgId:
    Value: !Ref EcsBackendServiceSg
    Export:
      Name: !Sub ${ProjectName}-${Env}-backend-sg-id
  EcsFrontendServiceSgId:
    Value: !Ref EcsFrontendServiceSg
    Export:
      Name: !Sub ${ProjectName}-${Env}-frontend-sg-id
  DatabaseSgId:
    Value: !Ref DatabaseSg
    Export:
      Name: !Sub ${ProjectName}-${Env}-database-sg-id
